added footer section

--- a/src/Styles/Mixins.scss
+++ b/src/Styles/Mixins.scss
@@ -18,7 +18,7 @@
   background-color: $darker-color;
   color: $white;
 
-  transition: all 0.3s;
+  transition: all 0.3s ease-in;
 
   &:hover {
     background-color: $dark-color;
