--- a/src/Components/HowItWorks/HowItWorks.module.scss
+++ b/src/Components/HowItWorks/HowItWorks.module.scss
@@ -40,7 +40,7 @@
       h3 {
         font-weight: $medium-font-weight;
         font-size: 2rem;
-        margin: 0.7rem 0;
+        margin: 1.5rem 0 1rem 0;
       }
 
       p {
