--- a/src/Components/HowItWorks/HowItWorks.module.scss
+++ b/src/Components/HowItWorks/HowItWorks.module.scss
@@ -33,7 +33,7 @@
       width: 25%;
       height: 25rem;
 
-      background-color: #ebf5fe;
+      background-color: $light-color;
       border-radius: 50%;
       position: relative;
 
