--- a/src/Styles/Variables.scss
+++ b/src/Styles/Variables.scss
@@ -2,6 +2,7 @@
 $primary-color: #339af0;
 $darker-color: #297bc0;
 $dark-color: #1f5c90;
+$light-color: #ebf5fe;
 
 $text-color-primary: #555;
 $text-color-dark: #333;
