--- a/src/Styles/Variables.scss
+++ b/src/Styles/Variables.scss
@@ -6,6 +6,7 @@ $light-color: #ebf5fe;
 
 $text-color-primary: #555;
 $text-color-dark: #333;
+$very-light-gray: #e9ecef;
 $white: #fff;
 
 // FONT-SIZES
