--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -67,7 +67,7 @@
 
 .social {
   grid-column: 1 / -1;
-  border: #e9ecef solid 2px;
+  border: $very-light-gray solid 2px;
   border-radius: 5px;
   display: flex;
   justify-content: space-between;
