added stars to testimonials

--- a/src/Components/Testimonials/Testimonial/Testimonial.module.scss
+++ b/src/Components/Testimonials/Testimonial/Testimonial.module.scss
@@ -1,9 +1,8 @@
 @import "../../../Styles/Mixins.scss";
 @import "../../../Styles/Variables.scss";
 
-.rating {
-  text-align: center;
-  font-size: 2rem;
+.testimonialContainer {
+  @include flex-center();
 }
 
 .text {
