--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -9,6 +9,12 @@
   padding: 0 6.4rem;
 }
 
+.active {
+  background-color: $dark-color;
+  padding: 3rem;
+  color: aquamarine;
+}
+
 .logo {
   font-size: 3rem;
   text-decoration: none;
@@ -25,8 +31,8 @@
 .mainNavLink:link,
 .mainNavLink:visited {
   @include btn();
-  background-color:$white;
-  color:$text-color-dark;
+  background-color: $white;
+  color: $text-color-dark;
 }
 
 .mainNavLink:hover,
@@ -38,9 +44,7 @@
   gap: 3.6rem;
 
   .navBtnColor {
-    background-color:$darker-color;;
-    color:$white;
+    background-color: $darker-color;
+    color: $white;
   }
 }
-
-
