--- a/src/Components/Testimonials/AddTestimonial/AddTestimonial.module.scss
+++ b/src/Components/Testimonials/AddTestimonial/AddTestimonial.module.scss
@@ -11,12 +11,7 @@
 }
 
 .textarea {
-  font-size: 1.6rem;
-  line-height: 1.3;
-  margin-top: 1rem;
-  padding: 1rem;
-  border-radius: 10px;
-  font-family: inherit;
+  @include text-area();
 }
 
 .submitBtn {
