--- a/src/Styles/Mixins.scss
+++ b/src/Styles/Mixins.scss
@@ -40,3 +40,12 @@
   align-items: center;
   justify-content: center;
 }
+
+@mixin text-area() {
+  font-size: 1.6rem;
+  line-height: 1.3;
+  margin-top: 1rem;
+  padding: 1rem;
+  border-radius: 10px;
+  font-family: inherit;
+}
