--- a/src/Styles/Variables.scss
+++ b/src/Styles/Variables.scss
@@ -9,6 +9,8 @@ $text-color-dark: #333;
 $very-light-gray: #e9ecef;
 $white: #fff;
 
+$error: #f03e3e;
+
 // FONT-SIZES
 $default-font-size: 1.6rem;
 
