adding testimonials to firebase

--- a/src/Components/Testimonials/AddTestimonial/AddTestimonial.module.scss
+++ b/src/Components/Testimonials/AddTestimonial/AddTestimonial.module.scss
@@ -19,3 +19,9 @@
   display: block;
   margin: 1rem auto 2rem auto;
 }
+
+.error {
+  font-size: 1.6rem;
+  text-align: center;
+  color: $error;
+}
