--- a/src/Components/Auth/AuthForm.module.scss
+++ b/src/Components/Auth/AuthForm.module.scss
@@ -6,10 +6,11 @@
 }
 
 .authForm {
-  width: 50%;
+  width: 40%;
   margin: 3rem auto;
   padding: 5rem 3rem;
   background-color: $light-color;
+  border-radius: 10px;
 
   form {
     display: flex;
@@ -27,18 +28,18 @@
   text-align: center;
 
   label {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
 
   input {
     display: block;
-    width: 100%;
-    padding: 1.6rem 2rem;
+    width: 50%;
+    padding: 1rem 2rem;
     border-radius: 15px;
     font-size: 1.6rem;
     border: none;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-    margin-top: 1rem;
+    margin: 1rem auto 0 auto;
   }
 }
 
