added car cards

--- a/src/Components/Cars/Search/Search.module.scss
+++ b/src/Components/Cars/Search/Search.module.scss
@@ -4,6 +4,7 @@
 .container {
   @include container();
   margin-top: 1rem;
+  margin-bottom: 3rem;
   background-color: $light-color;
   height: 8rem;
   border-radius: 10px;
