--- a/src/Components/Cars/CarItem/CarItem.module.scss
+++ b/src/Components/Cars/CarItem/CarItem.module.scss
@@ -3,24 +3,32 @@
 
 .container {
   @include container();
+  margin-top: 3rem;
+}
+
+.car {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
 }
 
 .img {
   img {
-    width: 50%;
+    width: 100%;
   }
 }
 
 .carDetails {
   background-color: $light-color;
-  border-radius: 10px;
-  padding: 2rem 3rem;
-  font-size: 2rem;
+  padding: 2rem 4rem;
+  font-size: 1.8rem;
   display: flex;
-  gap: 3rem;
-  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 1.6rem;
 
   p {
+    border-bottom: 1px solid #adb5bd;
+    padding-bottom: 1rem;
+
     span {
       font-weight: $semi-bold-font-weight;
     }
