--- a/src/Components/Cars/CarItem/CarItem.module.scss
+++ b/src/Components/Cars/CarItem/CarItem.module.scss
@@ -9,6 +9,7 @@
 .car {
   display: grid;
   grid-template-columns: 2fr 1fr;
+  grid-gap: 3rem;
 }
 
 .img {
@@ -25,7 +26,7 @@
   flex-direction: column;
   gap: 1.6rem;
 
-  p {
+  .detail {
     border-bottom: 1px solid #adb5bd;
     padding-bottom: 1rem;
 
@@ -33,4 +34,26 @@
       font-weight: $semi-bold-font-weight;
     }
   }
+}
+
+.btnEdit {
+  @include btn();
+  float: right;
+  margin-top: 1rem;
+}
+
+.field {
+  padding: 5px 0 5px 10px;
+  font-family: inherit;
+  border-radius: 15px;
+  font-size: 1.2rem;
+  border: 1px solid #ced4da;
+  width: 35%;
+  margin-left: 0.5rem;
+}
+
+.invalidInput {
+  font-size: 1rem;
+  margin-left: 5px;
+  color: $error;
 }
