--- a/src/Components/Cars/CarItem/CarItem.module.scss
+++ b/src/Components/Cars/CarItem/CarItem.module.scss
@@ -40,6 +40,23 @@
   @include btn();
   float: right;
   margin-top: 1rem;
+  margin-right: 1rem;
+}
+
+.btnConfirm {
+  @include btn();
+  margin-right: 3rem;
+}
+
+.btnCancel {
+  @include btn();
+  background-color: transparent;
+  color: $text-color-dark;
+  box-shadow: inset 0 0 0 1px $darker-color;
+
+  &:hover {
+    color: $white;
+  }
 }
 
 .field {
