--- a/src/Components/Modal/Modal.module.scss
+++ b/src/Components/Modal/Modal.module.scss
@@ -12,8 +12,8 @@
 }
 
 .modal {
-  width: 20%;
-  height: 25%;
+  width: 35rem;
+  height: 20rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,10 +30,21 @@
 
 .btn {
   @include btn();
+
+  &:nth-child(2) {
+    background-color: transparent;
+    color: $text-color-dark;
+    box-shadow: inset 0 0 0 1px $dark-color;
+
+    &:hover {
+      color: $white;
+      background-color: $dark-color;
+    }
+  }
 }
 
 .title {
-  margin-bottom: 4rem;
+  margin-bottom: 5rem;
 }
 
 .actions {
