--- a/src/Components/Hero/Hero.module.scss
+++ b/src/Components/Hero/Hero.module.scss
@@ -2,43 +2,26 @@
 @import "../../Styles/Variables.scss";
 
 .hero {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  height: 80vh;
-  position:relative;
+  background-image: url("../../img/why-kei-8e2gal_GIE8-unsplash.jpg");
+  background-size: cover;
+  height: 90vh;
 
-  &__text{
-  max-width:60%;
-  max-height:80vh;
-  margin:auto 20rem auto 15rem;
-
-    &__content{
-      font-size: 2rem;
-      line-height: 1.6;
-      margin-bottom: 4.8rem;
-    }
+  .container {
+    max-width: 70%;
+    margin: 0 auto;
+    @include flex-center();
+    height: 100%;
   }
-}
 
-.h1{
-  @include heading(5.2rem, 3.2rem, 1.05)
-}
+  h1 {
+    @include heading(5.2rem, 3.2rem, 1.05);
+    color: $dark-color;
+  }
 
-.color {
-  background-color: $primary-color;
-}
-
-.btn {
-  @include btn();
-  padding: 1.8rem 2.4rem;
-}
-
-.img{
-  position:absolute;
-
-  max-height:100%;
-  right:-15%;
-  bottom:2%;
-
-
+  p {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    line-height: 1.8;
+    color: $white;
+  }
 }
