--- a/src/Components/SearchBox/SearchBox.module.scss
+++ b/src/Components/SearchBox/SearchBox.module.scss
@@ -4,12 +4,8 @@
 .box {
   width: 70rem;
   height: 10rem;
-  position: absolute;
-  right: 30%;
-  bottom: 2rem;
   border-radius: 15px;
-  background-color: $white;
-  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .form {
@@ -22,6 +18,7 @@
     font-size: 2rem;
     margin-right: 1.6rem;
     font-weight: $medium-font-weight;
+    color: $text-color-dark;
   }
 
   select {
