--- a/src/Components/Cars/CarItem/CarItem.module.scss
+++ b/src/Components/Cars/CarItem/CarItem.module.scss
@@ -74,3 +74,15 @@
   margin-left: 5px;
   color: $error;
 }
+
+@media (max-width: 53em) {
+  .car {
+    display: block;
+  }
+
+  .sliderContainer {
+    height: 40rem;
+    width: 100%;
+    margin-bottom: 3rem;
+  }
+}
