--- a/src/Components/Cars/CarsList/CarsList.module.scss
+++ b/src/Components/Cars/CarsList/CarsList.module.scss
@@ -72,3 +72,56 @@
     padding: 0 2rem;
   }
 }
+
+@media (max-width: 53em) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 2rem 2rem 2rem;
+
+    .cardItem {
+      width: 100%;
+
+      h3 {
+        text-align: center;
+      }
+    }
+
+    img {
+      width: 70%;
+      display: block;
+      margin: 0 auto 2rem auto;
+    }
+  }
+  .carDetails {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .priceBox {
+    margin-top: 2rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    .btn {
+      margin: 0;
+    }
+
+    .price {
+      display: inline;
+      margin-right: 1rem;
+    }
+
+    div {
+      p {
+        &:nth-child(2) {
+          display: inline;
+        }
+      }
+    }
+  }
+}
