--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -3,13 +3,14 @@
 
 .headerContainer {
   position: relative;
+  z-index: 1;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 9.6rem;
+  height: 8rem;
   padding: 0 6.4rem;
 }
 
@@ -71,7 +72,7 @@
   .btnMobile {
     display: inline-block;
     z-index: 10;
-    padding: 1rem 1rem 0 1rem;
+    padding: 1rem;
 
     &:focus {
       box-shadow: none;
@@ -81,10 +82,11 @@
   .header {
     background-color: rgba(255, 255, 255, 0.95);
     position: absolute;
-    top: 32px;
+    top: 0;
     left: 0;
     height: 100vh;
     width: 100%;
+    z-index: -1;
 
     display: flex;
     flex-direction: column;
