--- a/src/Components/pages/AboutPage/AboutPage.module.scss
+++ b/src/Components/pages/AboutPage/AboutPage.module.scss
@@ -18,7 +18,7 @@
   }
   p {
     font-size: 1.6rem;
-    line-height: 1.4;
+    line-height: 1.5;
   }
 
   .aboutImg {
@@ -46,4 +46,18 @@
 
 .number {
   font-size: 3rem;
+}
+
+@media (max-width: 53em) {
+  .about {
+    display: block;
+    padding: 0 3rem;
+
+    h2 {
+      text-align: center;
+    }
+    .aboutImg {
+      display: none;
+    }
+  }
 }
