added media query for mobile devices

--- a/src/Components/AvailableModels/AvailableModels.module.scss
+++ b/src/Components/AvailableModels/AvailableModels.module.scss
@@ -29,3 +29,13 @@
     }
   }
 }
+
+@media (max-width: 32em) {
+  .container {
+    .logos {
+      img {
+        height: 2.8rem;
+      }
+    }
+  }
+}
