--- a/src/Components/HowItWorks/HowItWorks.module.scss
+++ b/src/Components/HowItWorks/HowItWorks.module.scss
@@ -86,3 +86,12 @@
     }
   }
 }
+
+@media (max-width: 32em) {
+  .container {
+    .steps {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+}
