--- a/src/Components/WhyChoose/WhyChoose.module.scss
+++ b/src/Components/WhyChoose/WhyChoose.module.scss
@@ -64,3 +64,14 @@
     }
   }
 }
+
+@media (max-width: 32em) {
+  .container {
+    .boxes {
+      .box {
+        width: 70%;
+        height: 28rem;
+      }
+    }
+  }
+}
