--- a/src/Components/AddCar/AddCar.module.scss
+++ b/src/Components/AddCar/AddCar.module.scss
@@ -74,3 +74,12 @@
     height: 100%;
   }
 }
+
+@media (max-width: 32em) {
+  .form {
+    .selectField,
+    .inputField {
+      width: 60%;
+    }
+  }
+}
