--- a/src/Components/Auth/Login/Login.module.scss
+++ b/src/Components/Auth/Login/Login.module.scss
@@ -1,11 +1,19 @@
 @import "../../../Styles/Mixins.scss";
 @import "../../../Styles/Variables.scss";
 
-.form {
+.signin {
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
+
+.signup {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1.5rem;
+  margin-bottom: 1rem;
+}
+
 .control {
   text-align: center;
 
@@ -15,13 +23,17 @@
 
   input {
     display: block;
-    width: 60%;
+    width: 70%;
     padding: 1rem 2rem;
     border-radius: 15px;
     font-size: 1.6rem;
     border: none;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
     margin: 1rem auto 0 auto;
+  }
+
+  .inputLogin {
+    width: 50%;
   }
 }
 
@@ -32,9 +44,7 @@
 }
 
 .invalidInput {
-  font-size: 1.6rem;
-  margin-top: 1rem;
-  color: $error;
+  @include invalid-input();
 }
 
 .error {
