--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -56,7 +56,7 @@
 .footerLink:visited {
   text-decoration: none;
   font-size: 1.6rem;
-  color: #767676;
+  color: $light-gray;
   transition: all 0.3s;
 }
 
