--- a/src/Styles/Mixins.scss
+++ b/src/Styles/Mixins.scss
@@ -49,3 +49,15 @@
   border-radius: 10px;
   font-family: inherit;
 }
+
+@mixin invalid-input() {
+  font-size: 1.6rem;
+  margin-top: 1rem;
+  color: $error;
+}
+
+@mixin error() {
+  font-size: 1.6rem;
+  text-align: center;
+  color: $error;
+}
