--- a/src/Styles/Variables.scss
+++ b/src/Styles/Variables.scss
@@ -3,6 +3,7 @@ $primary-color: #339af0;
 $darker-color: #297bc0;
 $dark-color: #1f5c90;
 $light-color: #ebf5fe;
+$light-gray: #767676;
 
 $text-color-primary: #555;
 $text-color-dark: #333;
